--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "Stock_Analysis_Tool"]
-	path = Stock_Analysis_Tool
-	url = https://github.com/matej-tomik/Stock_Analysis_Tool
+	path = stock_screen_analyser
+	url = https://github.com/matej-tomik/stock_screen_analyser
